# active-safe-mapping

./: CMakeLists.txt  README.md  package.xml
launch/: mav_hovering_example_with_down_vi_sensor.launch  run_rl.launch  simple_exploration.launch
resource/: \  asphalt.world  easy_tables  easy_tables.world  easy_tables_true_map.xcf  mav_with_down_vi_sensor.gazebo  tables_no_sun  tables_room
src/: .drone_classifier.py.swp  actvlrn.py  drone_classifier.py  gym_randrooms.py  gym_randrooms_from_files.py  high_move_and_hover.cpp  image_lstm.py  plot_utils.py  policy_model.py  run.py  safe_map_active_learner.py  safe_map_active_learner_cheat.py  takeoff_and_hover.cpp
